--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -31,13 +31,13 @@
 </div>	
 
 <div class="row">
-	<div class="col-lg-12">
+	<div class="col-xs-12">
 		<div style="background-color: #356190; margin-bottom: 1px; height: 238px; overflow-y: auto;" class="comm-rcorners-1" ng-repeat="detail in taskDetail">
-			<div ng-repeat="f in fieldName" class="col-lg-3" style="font-size: 13px; padding: 0; color: #E1E2E3;">
-				<div class="col-lg-5" style="text-align: right; margin: 0; min-height: 38px; border-top: 1px solid #234E7C; background-color: #264F7A; word-wrap: break-word;">
+			<div ng-repeat="f in fieldName" class="col-xs-3" style="font-size: 13px; padding: 0; color: #E1E2E3;">
+				<div class="col-xs-5" style="text-align: right; margin: 0; min-height: 38px; border-top: 1px solid #234E7C; background-color: #264F7A; word-wrap: break-word;">
 					<span>{{ f.columnNameAlias || f.columnName }}: </span>
 				</div>
-				<div class="col-lg-7" style="padding: 1px 0 0 0; background-color: #356190; border-top: 1px solid #234E7C;"
+				<div class="col-xs-7" style="padding: 1px 0 0 0; background-color: #356190; border-top: 1px solid #234E7C;"
 					 ng-style="(f.isNotice && !isDisableNoticePrintBtn) ? {'cursor': 'pointer'} : {}" ng-click="(f.isNotice && !isDisableNoticePrintBtn && !isEditMode) ? noticeMenu(detail[f.columnName+'_hide'] || detail[f.columnName]) : ''">
 					 
 					 <span ng-show="group1 && isEditMode">
