--- a/backend/src/main/webapp/app/views/dym_list/main.html
+++ b/backend/src/main/webapp/app/views/dym_list/main.html
@@ -1,3 +1,9 @@
+<style>
+.my-cus.ng-hide {
+    display: block!important;
+    visibility: hidden;
+}
+</style>
 <div>
 	<div class="row">
 		<div class="col-lg-12">
@@ -10,7 +16,7 @@
             <div class="panel panel-primary">
                 <div class="panel-heading">
                 	<i class="fa fa-list-alt fa-fw"></i> {{ headerTitle }}
-					<div class="btn-group pull-right" ng-show="group0 && isShowProd">
+					<div class="my-cus btn-group pull-right" ng-show="group0 && isShowProd">
 						<button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
 							<i class="fa fa-chevron-down"></i>
 						</button>
@@ -18,7 +24,7 @@
 							<li ng-repeat="u in products"><a href="" ng-click="changeProduct(u)">{{ u.productName }}</a></li>
 						</ul>
 					</div>
-					<span class="pull-right" ng-show="group0 && isShowProd">{{ product.productName }}&nbsp&nbsp</span>
+					<span class="pull-right" ng-show="group0">{{ product.productName }}&nbsp&nbsp</span>
                 
                     <button type="button" class="btn btn-info btn-circle btn-lg" ng-show="isShowBack"
                     		style="position: absolute; right: 0px; top: -5px;" ng-click="gotoSelected()">
