--- a/backend/src/main/webapp/app/views/working/tab_addr.html
+++ b/backend/src/main/webapp/app/views/working/tab_addr.html
@@ -4,9 +4,6 @@
 }
 </style>
 
-<button type="button" class="btn btn-primary btn-circle" ng-click="addrObj.addItem()" style="position: absolute; right: 15px; top: -33px;"><i class="fa fa-plus"></i></button>
-
-
 <div class="table-responsive">	
 	<table class="table table-striped table-hover" style="margin: 0;">
 		<thead>
@@ -65,6 +62,8 @@
 			</tr>
 		</tbody>
 	</table>
+	<br />
+	<button type="button" class="btn btn-primary btn-circle" ng-click="addrObj.addItem()"><i class="fa fa-plus"></i></button>
 </div>
 					
                
