--- a/backend/src/main/webapp/app/views/newtask/main.html
+++ b/backend/src/main/webapp/app/views/newtask/main.html
@@ -168,16 +168,19 @@
 				  <div class="panel-body">
 				  
 				  	<div class="row" ng-repeat="item in menus"> 
-				  		<div class="col-lg-8" style="text-align: center;">
-						  	<button class="btn btn-primary col-lg-12" type="button" style="margin-bottom: 3px;" ng-click="gotoImportOthers(item, 'search')"
-						  	        editable-text="item.menuName" e-style="margin-bottom: 3px; min-width: 300px;" e-name="menuName" e-form="rowform">{{ item.menuName }}</button>
+				  		<div class="col-lg-7" style="text-align: center;">
+						  	<button class="btn btn-primary col-lg-8" type="button" style="margin-bottom: 3px;" ng-click="gotoImportOthers(item, 'search')"
+						  	        editable-text="item.menuName" e-style="margin-bottom: 3px; min-width: 200px;" e-name="menuName" e-form="rowform">{{ item.menuName }}</button>
+						  	&nbsp;
+				  	        <span class="col-lg-4" editable-checkbox="item.isPgs" e-name="isPgs" e-title="ปกส.?" e-form="rowform"></span>
 				  		</div>
-				  		<div class="col-lg-4">
+				  		<div class="col-lg-5" style="text-align: right;">
 				  			<form editable-form name="rowform" onbeforesave="saveMenu($data, item, $index)" ng-show="rowform.$visible" class="form-buttons form-inline" shown="inserted == item">
 					          <button type="submit" ng-disabled="rowform.$waiting" class="btn btn-success">บันทึก</button>
 					          <button type="button" ng-disabled="rowform.$waiting" ng-click="item.id != null ? rowform.$cancel() : cancelNewMenu(item)" class="btn btn-default">ยกเลิก</button>
 					        </form>
 					        <div class="buttons" ng-show="!rowform.$visible">
+					          <i class="fa fa-check-circle fa-lg user-status-enabled-icon" ng-show="item.isPgs" title="ประกันสังคม"></i>&nbsp;&nbsp;&nbsp;
 						      <i class="fa fa-desktop fa-lg user-action-icon-primary" title="ตั้งค่าการแสดงผลข้อมูล" ng-click="gotoImportOthers(item, 'setting')" ng-show="group0"></i>
 					          <button class="btn btn-info" ng-click="rowform.$show()">แก้ใข</button>
 					          <button class="btn btn-danger" ng-click="removeMenu($index, item.id)">ลบ</button>
