--- a/backend/src/main/webapp/app/views/working/tab_trace.html
+++ b/backend/src/main/webapp/app/views/working/tab_trace.html
@@ -9,7 +9,7 @@
 
 <!-- <button type="button" class="btn btn-primary btn-circle" ng-click="askModal()" style="position: absolute; left: 495px; top: -35px;"><i class="fa fa-plus"></i></button> -->
 
-<button type="button" class="btn btn-success" style="padding: 1px 12px 0px 12px; position: absolute; left: 495px; top: -35px;" 
+<button type="button" class="btn btn-primary" style="padding: 1px 8px 0px 8px; position: absolute; left: 495px; top: -35px;" 
 		ng-click="askModal()" ng-disabled="lastTaskDetailId == idActive">
 	<i class="fa fa fa-plus fa-2x"></i>
 </button>
