--- a/backend/src/main/webapp/app/views/trace_result/main.html
+++ b/backend/src/main/webapp/app/views/trace_result/main.html
@@ -154,7 +154,7 @@
 									<div class="col-lg-12">
 										  
 										<div class="form-group input-group">
-											<span class="input-group-addon">ประเภท</span>
+											<span class="input-group-addon">Code</span>
 											<div class="input-group">
 												<select name="codeName" class="form-control" ng-model="formData.codeName" ng-options="option.fieldName as option.name for option in dymList" ng-change="codeNameChange()">
 													<option value="">--Select--</option>
