--- a/backend/src/main/webapp/app/views/trace_result/main.html
+++ b/backend/src/main/webapp/app/views/trace_result/main.html
@@ -175,6 +175,15 @@
 									   <button type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm()">{{'user.search.clear_btn' | translate}}</button>
 									   <button type="submit" class="btn btn-outline btn-primary">ค้นหา</button>
 									   
+									   <div class="pull-right">
+									   	   Excel to Text
+										   <input type="file" class="form-control" name="assign" id="assign"
+												  style="width: 180px;" nv-file-select="" uploader="uploader"
+												  accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" />
+									   </div>
+									   
+									   
+									   
 									</div>  
 								</div>
 							
