--- a/backend/src/main/webapp/app/views/working/tab_trace.html
+++ b/backend/src/main/webapp/app/views/working/tab_trace.html
@@ -9,8 +9,8 @@
 
 <!-- <button type="button" class="btn btn-primary btn-circle" ng-click="askModal()" style="position: absolute; left: 495px; top: -35px;"><i class="fa fa-plus"></i></button> -->
 
-<button type="button" class="btn btn-primary" style="padding: 1px 8px 0px 8px; position: absolute; left: 495px; top: -35px;" ng-click="askModal()">
-	<i class="fa fa fa-plus fa-2x"></i>
+<button type="button" class="btn btn-primary" title="บันทึกผลการติดตาม" style="padding: 5px 15px 5px 15px; position: absolute; left: 475px; top: -36px;" ng-click="askModal()">
+	<i class="fa fa fa-plus fa-1x"></i>
 </button>
 
 <div class="panel panel-info" style="margin: 0;">
