--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -92,11 +92,11 @@
 		
 		&nbsp;&nbsp;&nbsp;
 		<div class="btn-group" style="margin: 3px 0 3px 0;">
-		  <button type="button" class="btn btn-success btn-outline" style="padding: 1px 13px 1px 3px;" ng-click="nextPrev(false, true)" ng-disabled="firstTaskDetailId == idActive">
-		  	<i class="fa fa-caret-square-o-left fa-2x"></i>
+		  <button type="button" class="btn btn-success btn-outline" title="ก่อนหน้า" style="padding: 5px 13px 5px 5px;" ng-click="nextPrev(false, true)" ng-disabled="firstTaskDetailId == idActive">
+		  	<i class="fa fa-hand-o-left fa-1x"></i>
 		  </button>
-		  <button type="button" class="btn btn-success btn-outline" style="padding: 1px 3px 1px 13px;" ng-click="nextPrev(true, true)" ng-disabled="lastTaskDetailId == idActive">
-		  	<i class="fa fa-caret-square-o-right fa-2x"></i>
+		  <button type="button" class="btn btn-success btn-outline" title="ถัดไป" style="padding: 5px 5px 5px 13px;" ng-click="nextPrev(true, true)" ng-disabled="lastTaskDetailId == idActive">
+		  	<i class="fa fa-hand-o-right fa-1x"></i>
 		  </button>
 		</div>
 		
