--- a/backend/src/main/webapp/app/views/home/main.html
+++ b/backend/src/main/webapp/app/views/home/main.html
@@ -8,6 +8,11 @@
    <div class="row">
        <div class="col-lg-12">
        
+       
+       <input colorpicker ng-model="color" type="text" colorpicker-selected="test()" colorpicker-closed="test()">
+       
+       
+       
            <div class="row">
 			<div class="col-lg-4 col-lg-offset-4">
 				<div class="panel panel-primary">
