--- a/backend/src/main/webapp/app/views/trace_result/main.html
+++ b/backend/src/main/webapp/app/views/trace_result/main.html
@@ -1,4 +1,5 @@
 
+
 <div>
 	<div class="row">
 		<div class="col-lg-12">
@@ -179,7 +180,7 @@
 									   	   Excel to Text
 										   <input type="file" class="form-control" name="assign" id="assign"
 												  style="width: 180px;" nv-file-select="" uploader="uploader"
-												  accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" />
+												  accept="application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" />
 									   </div>
 									   
 									   
