--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -4,6 +4,19 @@
 		border-radius: 5px 5px 5px 5px;
 		padding-left: 30px;
 	}
+	
+	/* http://stackoverflow.com/questions/28807391/angular-bootstrap-modal-with-active-background-elements */
+	/* .modal-backdrop {
+	    display: none;
+	}
+	.modal {
+	    left: 50%;
+	    right: inherit;
+	    top: 50%;
+	    bottom: inherit;
+	    -webkit-transform: translate(-50%, -50%);
+	    transform: translate(-50%, -50%);
+	} */
 </style>
 
 <div class="row">
