--- a/backend/src/main/webapp/app/views/trace_result_report/main.html
+++ b/backend/src/main/webapp/app/views/trace_result_report/main.html
@@ -125,8 +125,9 @@
 				<thead>
 					<tr style="color: #337AB7;">
 						<th width="10%">#</th>
-						<th width="50%">ชื่อไฟล์</th>
-						<th width="25%">วันที่นำเข้า</th>
+						<th width="40%">ชื่อไฟล์</th>
+						<th width="20%">ชื่อแบบฟอร์ม</th>
+						<th width="15%">วันที่นำเข้า</th>
 						<th width="15%"></th>
 					</tr>
 				<thead>
@@ -135,6 +136,11 @@
 						<td>{{ $index + 1 + ((formData.currentPage - 1) *
 							formData.itemsPerPage) }}</td>
 						<td>{{ data.fileName }}</td>
+						<td>
+							<a href="#" e-class="form-control" buttons="no" onaftersave="updateTemplateName(data)" editable-text="data.templateName"> 
+								{{ data.templateName || 'empty'}} 
+							</a>
+						</td>
 						<td>{{ data.createdDateTime | date:gb_dateTimeFormat }}</td>
 						<td><i class="fa fa-times fa-lg user-action-icon-danger"
 							ng-click="deleteItem(data.id)"></i>&emsp; <i class="fa fa-lg"
